# tf2

./: LICENSE  README.md
examples/: README.md  env.sh
examples/chemreac/: Makefile  main.sh  test.f90
examples/chemreac/data/: postproc.py  true.csv
examples/chemreac/model/: inpfile.json
examples/efficientnet/: Makefile  main.sh  model.py  test.cpp
tf2/: CMakeLists.txt
tf2/cmake/: EnsureOutOfSourceBuild.cmake  Findcppflow.cmake  Findjson.cmake  Findtensorflow.cmake  LogMessage.cmake  SetCXXFlags.cmake  SetFortranFlags.cmake  pycometConfig.cmake.in  tf2Config.cmake.in
tf2/examples/: CMakeLists.txt
tf2/examples/msd/: CMakeLists.txt  data.csv  postproc.ipynb
tf2/examples/msd/cpp/: CMakeLists.txt  inpfile.json  main_1d.cpp  main_2d.cpp
tf2/examples/msd/fortran/: CMakeLists.txt  inpfile.json  main.f90
tf2/examples/odr/: CMakeLists.txt  main.cpp
tf2/examples/ops/: CMakeLists.txt  main.cpp
tf2/include/: includes.h  interface.h  model.h  pycomet.h  tf2.h  utils.h
tf2/include/utils/: csv.h  data.h  ops.h
tf2/src/: interface.c  model.c  model.f90  pycomet.c  tf2.c  utils.f90  utils_t.f90
tf2/tools/: generate_inpfile.py  inpfile.json  set_device_opts.py
